--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "test": "jest --updateSnapshot --watch --coverage",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -11,6 +12,8 @@
   "dependencies": {
     "@expo/webpack-config": "0.17.2",
     "expo": "~47.0.6",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "^11.0.1",
     "expo-linear-gradient": "^12.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
@@ -19,7 +22,26 @@
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@testing-library/jest-native": "^5.3.0",
+    "@testing-library/react-native": "^11.5.0",
+    "babel-jest": "^29.3.1",
+    "jest": "^29.3.1",
+    "jest-expo": "^47.0.1",
+    "react-test-renderer": "^18.2.0"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ]
+  },
+  "transform": {
+    "^.+\\.js$": "babel-jest"
   },
   "private": true
 }
